# Data-Analyst

./: .gitignore  README.md  Диаграмма без названия.drawio  Схема-план по обучению.drawio
AI/n8n/: AI-agent.json  AI-agent.md
Python/: Demo_Конструктор функций для основных операций.py  PyCharm_базовые настройки IDE.docx  Выгрузка данных в Excel из дашборда Qlik.py  Конструктор преобразований дат и времени.py  Полезные ссылки.txt  Расписание скриптов.py  Скрипт по выгрузке в Excel данных из CRM.py  Скрипт по работе с Excel.py  Формирование слайда из Qlik через скриншот.py
Python/0_FirstScript/: Download_KP.py
Python/1_Пример конструктора с Asyncio и logg/: async_subprocess.py  logging.conf  main.py  qlik_driver.py
Python/Asyncio and Logging/: async_subprocess.py  info.txt  logging.conf  main.py  qlik_driver.py
Python/FastAPI/: .gitignore  (+2 more)
Python/tgbot_with_rag/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  init.md  pyproject.toml
Python/tgbot_with_rag/src/: __init__.py  config.py  config_store.py  main.py
Python/tgbot_with_rag/src/services/: __init__.py  document_ingestion.py  qa.py
Python/tgbot_with_rag/src/storage/: __init__.py  vector.py
Python/tgbot_with_rag/src/text/: __init__.py  chunking.py  embedder.py
Python/tgbot_with_rag/src/tooling/: __init__.py  bot_factory.py
Python/tgbot_with_rag/src/utils/: __init__.py  config_utils.py
Python/tgbot_with_rag/src/web/: __init__.py  app.py
Python/tgbot_with_rag/web/: app.js  embed_presets.json  template.html
Qlik/: 3_Пример приложения.qvf  Extract  Полезные ссылки.txt
(+67 files in other folders)
